--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -8,7 +8,7 @@ output:
 
 ### Loading and preprocessing the data
 
-I assume that the file `activity.csv` is placed in the same folder as this file (`PA1_template.Rmd`).
+I assume that the file `activity.cgesv` is placed in the same folder as this file (`PA1_template.Rmd`).
 
 ```{r}
 data <- read.csv("activity.csv")
@@ -61,6 +61,64 @@ steps.per.interval[which.max(steps.per.interval$Steps), ]
 
 ### Imputing missing values
 
+Total number of missing values in the dataset:
 
+```{r}
+sum(is.na(data$steps))
+```
+
+To fill the missing values, I'll use the median for that 5-minute interval based on data from the rest of the days. The dataset equal to the original but with the missing data filled in is:
+
+```{r}
+median.steps.per.interval <- aggregate(data$steps, by = list(data$interval), median, na.rm = TRUE)
+colnames(median.steps.per.interval) <- c("interval", "median.steps")
+
+imputed.data <- merge(data, median.steps.per.interval, sort = FALSE)
+missing <- is.na(imputed.data$steps)
+imputed.data$steps[missing] <- imputed.data$median.steps[missing]
+imputed.data$median.steps <- NULL
+```
+
+To compare resulting dataset to the original one, we repeat the steps done in the first part of the assignment: build a histogram of number of steps per day...
+
+```{r}
+imputed.steps.per.day <- aggregate(imputed.data$steps, by = list(imputed.data$date), sum)
+colnames(imputed.steps.per.day) <- c("Date", "Steps")
+hist(imputed.steps.per.day$Steps, breaks = 20, main = "Total number of steps taken each day", xlab = "Steps")
+```
+
+...and calculate mean and median values for them:
+
+```{r}
+mean(imputed.steps.per.day$Steps)
+median(imputed.steps.per.day$Steps)
+```
+
+Both mean and median are lower than for data set with missing values, because imputed values are mostly smaller than average (second bucket of the histogram).
 
 ### Are there differences in activity patterns between weekdays and weekends?
+
+Add a new factor to the dataset with "weekday" and "weekend" levels.
+
+```{r}
+week.data <- imputed.data
+week.data$weekday <- factor(weekdays(week.data$date) %in% c("Saturday", "Sunday"), levels = c(FALSE, TRUE), labels = c("weekday", "weekend"))
+summary(week.data)
+```
+
+Time series plot of average number of steps taken over each 5-minute interval, averaged across all weekdays and all weekends separately:
+
+```{r}
+avg.steps <- aggregate(week.data$steps, by = list(week.data$interval, week.data$weekday), mean)
+colnames(avg.steps) <- c("Interval", "Day", "Steps")
+
+par(mfrow = c(2, 1))
+plot(avg.steps[avg.steps$Day == "weekday", 1], avg.steps[avg.steps$Day == "weekday", 3], 
+     type="l", main = "Weekdays", 
+     xlab = "Interval", ylab = "Steps")
+plot(avg.steps[avg.steps$Day == "weekend", 1], avg.steps[avg.steps$Day == "weekend", 3], 
+     type="l", main = "Weekends", 
+     xlab = "Interval", ylab = "Steps")
+```
+
+We can see that on the weekends the movement starts later and ends later.
