--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -8,7 +8,7 @@ output:
 
 ### Loading and preprocessing the data
 
-I assume that the file `activity.cgesv` is placed in the same folder as this file (`PA1_template.Rmd`).
+I assume that the file `activity.csv` is placed in the same folder as this file (`PA1_template.Rmd`).
 
 ```{r}
 data <- read.csv("activity.csv")
